...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('New Entry'),
        automaticallyImplyLeading: false,
        centerTitle: true,
        forceMaterialTransparency: true,
      ),
      body: SingleChildScrollView(
          child: SizedBox(
...
              child: Column(children: [
                // Text field for the Journal Entry Title
                Padding(
                  padding: const EdgeInsets.all(20),
                  child: TextField(
                    controller: titleController,
                    key: const Key("titleInput"),
                    decoration: const InputDecoration(
                      border: UnderlineInputBorder(),
                      labelText: 'Title',
                    ),
                  ),
                ),

                // Text input field for the Journal Entry Body
                Padding(
                  padding: const EdgeInsets.all(20),
                  child: TextField(
                    controller: journalController,
                    key: const Key("journalInput"),
                    decoration: const InputDecoration(
                      border: UnderlineInputBorder(),
                      labelText: 'Journal Entry',
                    ),
                    maxLines: 8,
                    minLines: 1,
...
                // Chip display for the tags
                Padding(
                  padding: const EdgeInsets.all(20),
                  // Make the chips scrollable
                  child: Scrollbar(
                    child: SingleChildScrollView(
                      key: const Key('TagChipsDisplay'),
                      scrollDirection: Axis.horizontal,
                      child: Wrap(
                        spacing: 5,
                        children: tagChipList(),
                      ),
                    ),
...
                // Chip display for the emotions
                Padding(
                    padding: const EdgeInsets.all(20),
                    // Make the chips scrollable
                    child: Scrollbar(
                        child: SingleChildScrollView(
                            key: const Key('EmotionChipsDisplay'),
                            scrollDirection: Axis.horizontal,
                            child: Wrap(
                              spacing: 5,
                              children: _selectedEmotions
                                  .map((Emotion emotion) => ActionChip(
                                        label: Text(emotion.name),
...
          child: Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            //crossAxisAlignment: CrossAxisAlignment.baseline,
            children: [
              // Plan button
              TextButton(
                  key: const Key("planButton"),
                  child: const Text('Plan'),
                  onPressed: () async {
                    isPlan = false;
                    datePicked = null;

                    var selectedDate = await pickDate();
...
              /*
                  * Tag button
                  * Will create a multi select dialog field that will allow
                  * users to select the tags for the Journal Entry
                  */
              TextButton(
                  key: const Key("tagButton"),
                  child: const Text('Tag'),
                  onPressed: () {
                    showDialog(
                      context: context,
                      builder: (dialogContext) {
                        return StatefulBuilder(
...
                                  },
                                );
                              }).toList(),
                            ),
                            actions: <Widget>[
                              TextButton(
                                key: const Key('saveTagsButton'),
                                child: const Text('Save'),
                                onPressed: () {
                                  Navigator.of(context).pop();
                                },
                              ),
                            ],
...
              /*
                  * Emotion button
                  * Will create a multi select dialog field that will allow
                  * users to select the tags for the Journal Entry
                  */
              TextButton(
                  key: const Key("emotionButton"),
                  child: const Text('Emotion'),
                  onPressed: () {
                    showDialog(
                      context: context,
                      builder: (dialogContext) {
                        return StatefulBuilder(
...
                                  },
                                );
                              }).toList(),
                            ),
                            actions: <Widget>[
                              TextButton(
                                key: const Key('saveEmotionsButton'),
                                child: const Text('Save'),
                                onPressed: () {
                                  Navigator.of(context).pop();
                                },
                              ),
                            ],
...
                      },
                    );
                  }),

              // Save button
              TextButton(
                  key: const Key("saveButton"),
                  child: const Text('Save'),
                  onPressed: () {
                    Navigator.pop(context, getEntry());
                  }),
            ],
          )),
...
    int strength = 0;
    return showDialog(
        context: context,
        builder: (BuildContext context) {
          return AlertDialog(
            content: CircularSeekBar(
              key: const Key('EmotionalDial'),
              width: double.infinity,
              height: 175,
              progress: emotion.strength.toDouble(),
              barWidth: 8,
              startAngle: 5,
              sweepAngle: 360,
...
                        )),
              ),
            ),
            actions: [
              // pop the alert dialog off the screen and don't save the strength changes
              TextButton(
                  key: const Key('cancelDial'),
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                  child: const Text("Cancel")),

              // Save the strength changes and pop the dialog off the screen
              TextButton(
                  key: const Key('saveDial'),
                  onPressed: () {
                    emotion.strength = strength;
                    Navigator.of(context).pop();
                  },
                  child: const Text("Save")),
            ],
...
