...
              mainAxisSize: MainAxisSize.min,
              children: [
                //Tag name
                Container(
                  padding: const EdgeInsets.symmetric(vertical: 16),
                  child: TextFormField(
                    key: const Key('Tag Name Field'),
                    decoration: const InputDecoration(hintText: "Tag name"),
                    initialValue: name,
                    onChanged: (name) {
                      newName = name;
                    },
                  ),
                ),
                //Tag Color
                Container(
                  padding: const EdgeInsets.symmetric(vertical: 16),
                  child: DropdownMenu<Color>(
                    key: const Key('Tag Color Field'),
                    initialSelection: color,
                    dropdownMenuEntries: colorEntries,
                    //Show 5 colors at a time
                    menuHeight: 4 * 50.0,
                    onSelected: (color) => setState(() => newColor = color!),
                  ),
                ),
              ],
            ),
            //Conformation buttons
            actions: <Widget>[
              TextButton(
                  key: const Key('Save New Tag Button'),
                  child: const Text('Save'),
                  onPressed: () {
                    final newTag = Tag(name: newName, color: newColor);
                    settings.tagList.add(newTag);
                    //call save
                    settings.save();
...
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    TextFormField(
                      textAlign: TextAlign.center,
                      controller: textController,
                      key: const Key('Tag Search Bar'),
                      onChanged: (inputText) {
                        //the validator will update the compatible tag list to a state
                        //that will be used in the tagsExist function to build the display
                        if (inputText.isEmpty) {
                          //no input found yet so we update the compatible list to null and prompt user
                          compatibleTagList = null;
...
                          //if null that's our sign to return a button
                          Column finalColumn = Column(
                            mainAxisAlignment: MainAxisAlignment.center,
                            children: [
                              const Text("No Compatible Tags found: "),
                              ElevatedButton(
                                  key: const Key('Create Tag'),
                                  //on pressed adds the phrase in the text form field to the tag list
                                  onPressed: () => addTag(context,
                                      name: textController.text),
                                  child: const Text('Create Tag'))
                            ],
                          );
...
  pink(name: "Pink", color: Colors.pink),
  purple(name: "Purple", color: Colors.purple),
  deepPurple(name: "Deep Purple", color: Colors.deepPurple),
  indigo(name: "Indigo", color: Colors.indigo),
  blue(name: "Blue", color: Colors.blue),
  lightBlue(name: "Light Blue", color: Colors.lightBlue),
  cyan(name: "Cyan", color: Colors.cyan),
  teal(name: "Teal", color: Colors.teal),
  green(name: "Green", color: Colors.green),
  lightGreen(name: "Light Green", color: Colors.lightGreen),
  lime(name: "Lime", color: Colors.lime),
  yellow(name: "Yellow", color: Colors.yellow),
  amber(name: "Amber", color: Colors.amber),
...
